Añadido ejemplo de uso
Ejemplo practico

--- a/Pyspark window functions.ipynb
+++ b/Pyspark window functions.ipynb
@@ -584,6 +584,114 @@
     "  .where(col(\"row\")==1).select(\"department\",\"avg\",\"sum\",\"min\",\"max\") \\\n",
     "  .show()"
    ]
+  },
+  {
+   "source": [
+    "# 5. Caso de uso práctico"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://dev.mysql.com/doc/employee/en/\n",
+    "    \n",
+    "tables = [\"employees\",\"salaries\", \"titles\", \"dept_emp\", \"departments\", \"dept_manager\"]\n",
+    "\n",
+    "for table in tables:\n",
+    "    (spark.read\n",
+    "     .format(\"jdbc\")\n",
+    "     .option(\"url\", \"jdbc:mysql://localhost:3306/employees\")\n",
+    "     .option(\"driver\", \"com.mysql.jdbc.Driver\")\n",
+    "     .option(\"dbtable\", table)\n",
+    "     .option(\"user\", \"root\")\n",
+    "     .option(\"password\", \"password\")\n",
+    "     .load()) \\\n",
+    "    .createOrReplaceTempView(table)\n",
+    "    \n",
+    "spark.sql(\"SHOW TABLES\").show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Joining tables with SQL\n",
+    "query = \"\"\"\n",
+    "    SELECT \n",
+    "        e.emp_no,\n",
+    "        e.first_name || \" \" || e.last_name AS name,\n",
+    "        t.title,\n",
+    "        d.dept_name AS department,\n",
+    "        s.salary,\n",
+    "        s.from_date,\n",
+    "        s.to_date\n",
+    "    FROM employees AS e\n",
+    "    INNER JOIN titles AS t ON t.emp_no = e.emp_no\n",
+    "    INNER JOIN salaries AS s ON s.emp_no = e.emp_no\n",
+    "    INNER JOIN dept_emp AS de ON de.emp_no = e.emp_no\n",
+    "    INNER JOIN departments AS d ON d.dept_no = de.dept_no\n",
+    "\"\"\"\n",
+    "# Create DataFrame from query\n",
+    "employeeDF = spark.sql(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employeeDF.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employeeDF.orderBy(desc(\"to_date\")).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exclude rows with year 9999\n",
+    "employeeDF = employeeDF.select(\"*\").where(year(\"to_date\") != 9999)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "windowSpec = Window.partitionBy(\"emp_no\").orderBy(desc(\"to_date\"))\n",
+    "\n",
+    "employeeDF.withColumn(\"row_number\", row_number().over(windowSpec)).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "windowSpec = Window.partitionBy(\"emp_no\").orderBy(desc(\"to_date\"))\n",
+    "\n",
+    "employeeDF.withColumn(\"row_number\", row_number().over(windowSpec))\\\n",
+    "    .where(col(\"row_number\")==1).show()"
+   ]
   }
  ],
  "metadata": {
